--- a/public/tonconnect-manifest.json
+++ b/public/tonconnect-manifest.json
@@ -1,5 +1,5 @@
 {
     "url": "https://4irelabs.com/",
     "name": "TON Connect Tutorial",
-    "iconUrl": "https://Activine.github.io/ton_project/icon.svg"
+    "iconUrl": "https://activine.github.io/ton_project/icon.png"
 }
